footer alignment fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,8 @@ div#whispering-words-of-love div {
 	bottom: 40px;
 	text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35);
 	font-weight: 300;
+	width: 500px;
+	text-align: center;
 }
 
 #footer-of-discovery a {
